Updated gitignore to ignore large demo assets from the Toon Fantasy Nature pack.
The scene and terrain assets are massive, and as they are demo asset we don't need them in the project. If you want these assets in your copy of the project, reimport the Toon Fantasy Nature asset pack (see README).

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,10 @@ crashlytics-build.properties
 
 # macOS
 *.DS_Store
+
+# Package: Toon Fantasy Nature.
+# These are demo assets that are huge, and we don't need them in the repo.
+Assets/Toon Fantasy Nature/Scenes
+Assets/Toon Fantasy Nature/Scenes.meta
+Assets/Toon Fantasy Nature/Terrain
+Assets/Toon Fantasy Nature/Terrain.meta
